fix: form-card alignment

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
     grid-column: 2 / 3;
     background-color: white;
     border-radius: 10px;
-    margin: 1rem;
+    margin-top: 3rem;
     -webkit-box-shadow: 1px 2px 14px 6px rgba(0,0,0,0.10); 
     box-shadow: 1px 2px 14px 6px rgba(0,0,0,0.10);
 }
@@ -65,7 +65,7 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
     justify-content: center;
-    margin: 4rem 2rem 2rem 2rem;
+    margin: 3rem 2rem 2rem 2rem;
 }
 
 #left, #middle, #right{
